--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,14 @@
 language: scala
 scala:
- - "2.10.2"
+  - "2.10.2"
+branches:
+  only:
+    - master
 jdk:
- - oraclejdk7
- - oraclejdk6
- - openjdk7
- - openjdk6
+  - oraclejdk7
+  - openjdk7
+script:
+  - sbt ++$TRAVIS_SCALA_VERSION test
+  - sbt ++$TRAVIS_SCALA_VERSION publish-signed
+services:
+  - cassandra
